--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,27 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="notifications_admin_channel_name">admin_channel_name</string>
     <string name="notifications_admin_channel_description">admin_description</string>
+    <string name="email">email</string>
+    <string name="password">password</string>
+    <string name="login_to_your_account">login to your account</string>
+    <string name="login">login</string>
+    <string name="status">status</string>
+    <string name="display_name">Display Name</string>
+    <string name="total_friends">total friends</string>
+    <string name="send_friend_request">Send Friend Request</string>
+    <string name="decline_friend_request">Decline Friend Request</string>
+    <string name="name">Name</string>
+    <string name="create_account">create account</string>
+    <string name="create_a_new_account">create a new account</string>
+    <string name="change_image">CHANGE IMAGE</string>
+    <string name="change_status">CHANGE STATUS</string>
+    <string name="welcome_to_chatapp">Welcome to ChatApp</string>
+    <string name="your_status">Your status</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="last_seen">last seen</string>
+    <string name="message_text">message text</string>
+    <string name="user_default_status">user default status</string>
+    <string name="_00_00">00:00</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
