--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="latest_chats">Latest Chats</string>
 
     <string name="colon">:</string>
+    <string name="logo_photo">logo photo</string>
 </resources>
